# datagate-llm

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/datagate_llm/: __init__.py  engine.py  loader.py
src/datagate_llm/rules/: finance.json  healthcare.json  technology.json  universal.json
tests/: test_engine.py  test_loader.py  test_scan.py
