[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datagate-llm"
version = "0.1.0"
description = "The inference boundary layer between your data and outbound AI requests"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []
keywords = [
    "llm",
    "guardrails",
    "pii-detection",
    "prompt-injection",
    "data-privacy",
    "ai-security",
    "data-gate",
    "inference-boundary",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
semantic = ["onnxruntime"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
datagate_llm = ["rules/*.json"]
